fixed navbar and moved expense page

--- a/NavBarTest/nav.html
+++ b/NavBarTest/nav.html
@@ -1,14 +1,14 @@
 <nav>
-    <input type="checkbox" id="check">
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
-    </label>
-    <label class="logo">Budget Bros</label>
-    <ul>
-      <li><a class="active" href="home.php">Home</a></li>
-      <li><a href="../ExpensePage/index.html">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-      <button class='button' onclick="login()" style="width:auto;">Login</button>
-    </ul>
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <label class="logo">Budget Bros</label>
+  <ul>
+    <li><a class="active" href="./home.php">Home</a></li>
+    <li><a href="./expensePage.html">About</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a class="button" href="./login.php">Login</a></li>
+  </ul>
 </nav>
