changed some css

--- a/NavBarTest/nav.html
+++ b/NavBarTest/nav.html
@@ -6,7 +6,7 @@
   <label class="logo">Budget Bros</label>
   <ul>
     <li><a class="active" href="./home.php">Home</a></li>
-    <li><a href="./expensePage.html">About</a></li>
+    <li><a href="./expensePage.php">Budget Entry</a></li>
     <li><a href="#">Services</a></li>
     <li><a href="#">Contact</a></li>
     <li><a class="button" href="./login.php">Login</a></li>
